// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInMemoryTable empty array 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={Array []}
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with initial sorting 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "3",
        "name": "name3",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  sorting={
    Object {
      "sort": Object {
        "direction": "desc",
        "field": "name",
      },
    }
  }
/>
`;

exports[`EuiInMemoryTable with items 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with items and message - expecting to show the items 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="show me!"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with message 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={Array []}
  noItemsMessage="where my items at?"
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with message and loading 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={Array []}
  loading={true}
  noItemsMessage="Loading items...."
  onChange={[Function]}
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination and default page size 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 4,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination and selection 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, default page size and error 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  error="ouch!"
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 4,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 1,
    }
  }
  responsive={true}
/>
`;

exports[`EuiInMemoryTable with pagination, selection and sorting 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting  and simple search 1`] = `
<div>
  <EuiSearchBar
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
              "type": "button",
            },
          ],
          "name": "Actions",
        },
      ]
    }
    itemIdToExpandedRowMap={Object {}}
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
        Object {
          "id": "2",
          "name": "name2",
        },
        Object {
          "id": "3",
          "name": "name3",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 3,
      }
    }
    responsive={true}
    selection={
      Object {
        "itemId": "id",
        "onSelectionChanged": [Function],
      }
    }
    sorting={
      Object {
        "sort": undefined,
      }
    }
  />
</div>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and a single record action 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
      Object {
        "actions": Array [
          Object {
            "description": "edit",
            "name": "Edit",
            "onClick": [Function],
            "type": "button",
          },
        ],
        "name": "Actions",
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and column renderer 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "itemId": "id",
      "onSelectionChanged": [Function],
    }
  }
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and configured search 1`] = `
<div>
  <EuiSearchBar
    box={
      Object {
        "aria-label": "aria-label",
        "className": "testClass1 testClass2",
        "data-test-subj": "test subject string",
        "incremental": true,
      }
    }
    defaultQuery="name:name1"
    filters={
      Array [
        Object {
          "field": "name",
          "name": "Name1",
          "negatedName": "Not Name1",
          "type": "field_value_toggle",
          "value": "name1",
        },
      ]
    }
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
              "type": "button",
            },
          ],
          "name": "Actions",
        },
      ]
    }
    itemIdToExpandedRowMap={Object {}}
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 1,
      }
    }
    responsive={true}
    selection={
      Object {
        "itemId": "id",
        "onSelectionChanged": [Function],
      }
    }
    sorting={
      Object {
        "sort": undefined,
      }
    }
  />
</div>
`;

exports[`EuiInMemoryTable with sorting 1`] = `
<EuiBasicTable
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  itemIdToExpandedRowMap={Object {}}
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  sorting={
    Object {
      "sort": undefined,
    }
  }
/>
`;
